spec/e2e/field/get_on_string.lit
"str".foo # error: [line 1] Runtime error: Only instances have properties.
